--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -76,7 +76,6 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="4dp"
                     android:text="TextView"
-                    android:textAlignment="viewStart"
                     app:layout_constraintEnd_toStartOf="@+id/addMealBtn"
                     app:layout_constraintHorizontal_bias="0.045"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -88,10 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:text="TextView"
-                    android:textAlignment="viewStart"
-                    app:layout_constraintEnd_toEndOf="@+id/mealName"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView3"
+                    app:layout_constraintStart_toStartOf="@+id/mealName"
                     app:layout_constraintTop_toBottomOf="@+id/mealName" />
 
                 <TextView
@@ -100,10 +96,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:text="TextView"
-                    app:layout_constraintEnd_toEndOf="@+id/mealCountry"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintStart_toStartOf="@+id/mealCountry"
                     app:layout_constraintTop_toBottomOf="@+id/mealCountry" />
+
+                <ImageButton
+                    android:id="@+id/addFavBtnn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/primary"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/addMealBtn"
+                    app:layout_constraintTop_toBottomOf="@+id/addMealBtn"
+                    app:srcCompat="@drawable/heart_icon" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
