--- a/app/src/main/res/layout/calender_item_card.xml
+++ b/app/src/main/res/layout/calender_item_card.xml
@@ -40,7 +40,7 @@
 
                 <TextView
                     android:id="@+id/calName"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
@@ -72,6 +72,14 @@
                     app:layout_constraintStart_toStartOf="@+id/calName"
                     app:layout_constraintTop_toBottomOf="@+id/calName" />
 
+                <Button
+                    android:id="@+id/removeScheduleBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:text="@string/remove"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
